# netwhisper

./: .gitignore  README.md  ceos.clab.yml  install_netwhisper.sh  install_packages.sh  inventory.yml  logging_config.json  manage_azure.sh  pyproject.toml
mocks/: get_config.1  get_facts.1
netwhisper/: device.py  llm.py  logger.py  utils.py
netwhisper/api/: main.py  models.py
netwhisper/api/middleware/: logger.py
netwhisper/api/routes/: device.py  inventory.py
netwhisper/cli/: interaction.py  main.py
netwhisper/templates/: interface.j2  static_route.j2
